Finishing the Hazelnut Expansion